--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,8 @@ body {
     padding: 0;
     position: relative;
     padding-bottom: 100px;
+    overflow-x: hidden;
+    cursor: none;
 }
 
 .grid {
@@ -42,9 +44,6 @@ body {
     z-index: -1;
 }
 
-
-
-
 .grid-index-2 {
     margin-top: 200vh;
     margin-bottom: 100px;
@@ -60,7 +59,6 @@ button {
     border-radius: 0;
     transition: .3s;
     padding: 10px;
-    cursor: pointer;
 }
 
 section {
@@ -103,7 +101,7 @@ section {
 
 .btn-more:before {
     content: '';
-    transition: .5s;
+    transition: .4s;
     top: 0;
     width: 100%;
     height: 100%;
@@ -116,4 +114,26 @@ section {
 .btn-more:hover:before
 {
     left: -60%; 
+}
+
+.cursor-default {
+    width: 10px;
+    background-color: var(--light-color);
+    border-radius: 50px;
+    height: 10px;
+    position: fixed;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    z-index: 10;
+    transition: all .2s ease;
+    transition-property: background, transform;
+    transform-origin: 100% 100%;
+}
+
+.cursor-pointer {
+    transform: scale(2);
+}
+
+.cursor-hidden {
+    display: none;
 }
