--- a/css/text.css
+++ b/css/text.css
@@ -23,9 +23,9 @@ h2 {
 
 h3 {
     font-family: 'titleFont', sans-serif;
-    font-weight: 600;
+    font-weight: 800;
     font-size: 3vh;
-    color: var(--primary-color);  
+    color: var(--primary-color);
 }
 
 a {
@@ -33,6 +33,7 @@ a {
     font-weight: 400;
     font-size: large;
     color: var(--primary-color);
+    cursor: none;
 }
 
 menu a {
@@ -49,9 +50,9 @@ menu a:hover {
 }
 
 p {
-    font-family: 'Barlow', sans-serif;
-    font-weight: 400;
-    font-size: medium;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    font-size: 15px;
     color: var(--light-color);
 }
 
