new project system

--- a/css/text.css
+++ b/css/text.css
@@ -62,7 +62,8 @@ p {
     color: var(--primary-color);
     text-decoration: none;
     align-self: center;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
+    text-transform: uppercase;
 }
 
 .project-card-text {
