--- a/css/index-section.css
+++ b/css/index-section.css
@@ -10,6 +10,7 @@
     margin: 0;
     margin-bottom: 60px;
     width: 70%;
+    padding: 0 15px;
 }
 
 #about-section {
@@ -19,6 +20,7 @@
     justify-content: flex-start;
     margin: 0;
     line-height: 23px;
+    padding: 0 10px;
 }
 
 #about-section div {
