--- a/css/project-card.css
+++ b/css/project-card.css
@@ -10,43 +10,43 @@
     justify-content: center;
     align-items: center;
     margin: 10px;
-}
-
-.project-card {
+    margin-top: 0;
+    background-color: var(--dark-color);
+    border: solid 1px var(--light-color);
     overflow: hidden;
     position: relative;
-    width: 100%;
 }
+
 
 .project-card-cover {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
     transition: .5s;
-}
-
-.project-card:hover .project-card-cover{
+    position: relative;
     filter: brightness(50%);
 }
 
 .project-card-data {
     position: absolute;
-    bottom: 0;
+    top: 0;
     width: 100%;
-    transform: translateY(calc(70px + 1em));
+    transform: translateY(0);
     transition: transform 0.3s;
 }
 
-.project-card:hover .project-card-data {
-    transform: translateY(0);
-}
+/* .project-card:hover .project-card-data {
+    transform: translateY(20%);
+} */
 
 .project-card-content {
-    padding: 1em;
+    padding: 7px;
     position: relative;
     z-index: 1;
-    background-color: var(--dark-color);
+    background-color: var(--light-color);
 }
 
-.new_tag {
+.new-tag {
     position: absolute;
     z-index: 4;
     top: 0;
@@ -57,6 +57,78 @@
     font-size: 2vh;
     padding: 3px 15px;
     margin-right: 10px;
-    margin-top: 5px;
+    margin-top: 2px;
 }
 
+.new-tag-hidden  {
+    display: none;
+}
+
+#project-menu {
+    width: 100%;
+    position: relative;
+    display: flex;
+    padding: 0 10px;
+    margin-bottom: 20px;
+}
+
+#project-menu button {
+    border: solid 1px var(--light-color);
+    width: 100%;
+}
+
+#project-menu button:hover {
+    border: solid 1px var(--light-color);
+    background-color: var(--light-color);
+}
+
+.project-window-empty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    margin-top: 0;
+    background-color: var(--background-color);
+    border: solid 1px var(--light-color);
+    height: 300px;
+    position: relative;
+}
+
+.project-window-empty .project-window-navbar {
+    padding: 7px;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    transition: transform 0.3s;
+    z-index: 1;
+    background-color: var(--light-color);
+}
+
+.project-window-empty .project-window-content {
+    padding: 10px;
+    width: 100%;
+}
+
+#project-menu .active {
+    background-color: var(--light-color);
+}
+
+#project-section .div-column {
+    width: 40%;
+}
+
+.project-window-btn-more {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+    border: solid 1px var(--light-color);
+    background-color: transparent;
+    text-decoration: none;
+    color: var(--light-color);
+    border-radius: 0;
+    transition: .3s;
+    padding: 10px;
+    margin: 20px;
+    cursor: none;
+}
