--- a/css/project-card.css
+++ b/css/project-card.css
@@ -132,3 +132,9 @@
     margin: 20px;
     cursor: none;
 }
+
+.project-window-btn-more:hover {
+    border: solid 1px var(--light-color);
+    background-color: var(--light-color);
+    color: var(--background-color);
+}
