--- a/css/project-window.css
+++ b/css/project-window.css
@@ -5,7 +5,7 @@
     margin: 0;
 }
 
-.lien_image {
+.project-window1 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,7 +18,7 @@
 }
 
 
-.project-card-cover {
+.project-window1-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -34,10 +34,6 @@
     transform: translateY(0);
     transition: transform 0.3s;
 }
-
-/* .project-card:hover .project-card-data {
-    transform: translateY(20%);
-} */
 
 .project-card-content {
     padding: 7px;
@@ -82,7 +78,7 @@
     background-color: var(--light-color);
 }
 
-.project-window-empty {
+.project-window2 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -94,7 +90,7 @@
     position: relative;
 }
 
-.project-window-empty .project-window-navbar {
+.project-window2 .project-window-navbar {
     padding: 7px;
     position: absolute;
     top: 0;
@@ -104,7 +100,7 @@
     background-color: var(--light-color);
 }
 
-.project-window-empty .project-window-content {
+.project-window2 .project-window-content {
     padding: 10px;
     width: 100%;
 }
