--- a/css/navbar.css
+++ b/css/navbar.css
@@ -39,7 +39,7 @@ navbar {
   bottom: 0;
   width: 100%;
   height: 10px;
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   animation: slide-out 300ms ease-in-out forwards;
 }
 
