--- a/css/main.css
+++ b/css/main.css
@@ -52,20 +52,13 @@ body {
     z-index: 3;
 }
 
-button {
-    border: none;
-    background-color: var(--secondary-color);
-    color: var(--light-color);
-    border-radius: 0;
-    transition: .3s;
-    padding: 10px;
-    cursor: none;
-}
-
 section {
     width: 90%;
     margin: auto;
 }
+
+/*PRE-MADE DIV*/
+
 
 .div-row {
     margin-top: 0px;
@@ -81,12 +74,32 @@ section {
     display: flex;
     flex-direction: column;
 }
-.background-point {
-    background-color: var(--dark-color);
-    background-image:url(../img/point-pattern.png);
-    background-position: 0 15px;
-    background-repeat: repeat;
-    padding: 30px 0;
+
+/*BUTTONS*/
+
+button {
+    border: none;
+    background-color: var(--secondary-color);
+    color: var(--light-color);
+    border-radius: 0;
+    transition: .3s;
+    padding: 10px;
+    cursor: none;
+}
+
+button:hover {
+    background-color: var(--light-color);
+    color: var(--secondary-color);
+}
+
+.simple-btn {
+    padding: 10px;
+    background-color: var(--light-color);
+    color: var(--secondary-color);
+    text-decoration: none;
+    margin: 20px 0;
+    margin-block-end: 20px;
+    margin-block-start: 20px;
 }
 
 .btn-more {
