--- a/css/text.css
+++ b/css/text.css
@@ -32,8 +32,13 @@ a {
     font-family: 'Barlow', sans-serif;
     font-weight: 400;
     font-size: large;
-    color: var(--primary-color);
+    color: var(--light-color);
     cursor: none;
+    text-decoration: underline;
+}
+
+a:hover {
+    background-color: var(--primary-color);
 }
 
 menu a {
