recalage circle text + ajout new qui défile sur project window + toute la section jeu vidéo

--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,13 @@ section {
     flex-direction: column;
 }
 
+.div-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
 /*BUTTONS*/
 
 button {
