--- a/css/page-contact.css
+++ b/css/page-contact.css
@@ -23,3 +23,19 @@
     height: calc(3vw * 13 + .1em);
 }
 
+#copied-sign {
+    position: absolute;
+    font-family: Barlow;
+    font-weight: 700;
+    transform-origin: center;
+}
+
+.mail-div {
+    position: relative;
+    width: 100%;
+    height: 120px;
+    display: flex;
+    align-items: flex-end;
+    margin-right: 50px;
+    justify-content: flex-end;
+}
