--- a/css/page-index.css
+++ b/css/page-index.css
@@ -82,15 +82,30 @@
     overflow: hidden;
 }
 
+.scroll-text-new-div {
+    width: 40px;
+    position: absolute;
+    margin: 0;
+    margin-right: 1px;
+    background-color: var(--secondary-color);
+    overflow: hidden;
+}
+
 .scroll-text {
     display: inline-block;
     animation: Scroll 40s forwards linear infinite;
 }
 
+.scroll-text-new {
+    display: inline-block;
+    animation: Scroll 10s forwards linear infinite;
+    align-self: center;
+}
+
 @keyframes Scroll {
     0%{transform: translate(0, 0)}
     100%{transform: translate(-100%, 0)}
-  }
+}
 
 .scroll-text h5 {
     white-space: nowrap;
@@ -99,4 +114,13 @@
     font-weight: 900;
     font-size: 10vh;
     font-family: Barlow;
+}
+
+.scroll-text-new h5 {
+    font-family: Barlow;
+    font-size: 15px;
+    font-weight: 550;
+    white-space: nowrap;
+    padding: 7px 0;
+    padding-bottom: 6px;
 }
