--- a/css/project-window.css
+++ b/css/project-window.css
@@ -47,13 +47,8 @@
     z-index: 4;
     top: 0;
     right: 0;
-    background-color: var(--primary-color);
-    color: var(--light-color);
-    font-family: Poppins;
-    font-size: 2vh;
-    padding: 3px 15px;
     margin-right: 10px;
-    margin-top: 2px;
+    color: var(--primary-color);
 }
 
 .new-tag-hidden  {
