--- a/css/page-video-game.css
+++ b/css/page-video-game.css
@@ -2,7 +2,7 @@
     margin-top: 120px;
     margin-bottom: 100px;
     width: calc(3vw*30 + .1em);
-    height: calc(3vw * 10 + .1em);
+    height: calc(3vw * 23 + .1em);
 }
 
 #video-game-section {
@@ -14,138 +14,171 @@
 }
 
 .video-game-card {
-    background-color:var(--light-color);
-    overflow: hidden;
+    background-color: transparent;
     position: relative;
-    width: 30%;
-    height: 10vh;
+    width: 22.5%;
     transition: .5s;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     margin-bottom: 20px;
+    border-radius: 8px;
+    transform-style: preserve-3d;
+
 }
 
-.video-game-card img {
-    filter: brightness(80%);
-}
-
-.video-game-card-selected {
-    transition: .5s;
-    height: 30vh;
+.video-game-card:after {
+    content: '';
+    padding-bottom: 100%;
 }
 
 .video-game-card-top {
+    margin-top: 5px;
     background-color:var(--light-color);
     overflow: hidden;
     display: block;
     position: absolute;
     top: 0;
-    width: 100%;
-    height: 10vh;
+    width: 80%;
+    height: 30%;
     transition: .3s;
 }
 
-.video-game-card .video-game-card-bottom {
-    width: 110%;
-    height: 30%;
-    right: -110%;
+.video-game-card-top2 {
+    background-color:var(--primary-color);
+    border-radius: 0 0 8px 8px;
+    overflow: hidden;
+    display: block;
     position: absolute;
-    transition: 0.5s;
-    background-color: var(--light-color);
-    clip-path: polygon(10% 35%, 80% 35%, 85% 0%, 100% 0%, 100% 100%, 0% 100%);
-    z-index: 0;
-    bottom: 0;
+    top: 0;
+    right: 27.5%;
+    width: 45%;
+    height: 30%;
+    clip-path: polygon(0 0, 55% 0, 55% 90%, 80% 90%, 80% 10%, 55% 10%, 55% 0, 100% 0, 100% 100%, 0 100% );
 }
 
-.video-game-card-selected .video-game-card-bottom {
-    right: 0%;
+.video-game-card-arrow {
+    background-color:var(--dark-color);
+    position: absolute;
+    top: 2.5%;
+    left: 3.5%;
+    width: 8%;
+    height: 10%;
+    clip-path: polygon(0 70%, 50% 0, 100% 70%, 70% 70%, 70% 100%, 30% 100%, 30% 70%);
+    z-index: 6;
+}
+
+.video-game-card:hover .video-game-card-arrow {
+    background-color: var(--light-color);
+    animation: blink 1s infinite;
+}
+
+@keyframes blink {
+    0% {background-color: var(--dark-color);}
+    50% {background-color: var(--light-color);}
+}
+
+.video-game-card-bottom {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transition: 0.5s;
+    background-color: var(--primary-color);
+    clip-path: polygon(0 0, 14% 0%, 15% 1%, 15% 30%, 16% 31%, 74% 31%, 75% 30%, 75% 1%, 76% 0, 90% 0, 100% 10%, 100% 100%, 86% 100%, 85% 99%, 85% 41%, 84% 40%, 16% 40%, 15% 41%, 15% 99%, 14% 100%, 0% 100%);
+    z-index: 1;
+    bottom: 0;
+    border-radius: 8px;
+    filter: brightness(0.4);
+}
+
+.video-game-card-bottom2 {
+    background-color:var(--dark-color);
+    filter: opacity(0.9);
+    overflow: hidden;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    z-index: 0;
+    width: 71%;
+    height: 59%;
+    margin-bottom: 1%;
+    display: flex;
+    justify-content: center;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 95% 100%, 95% 6%, 94% 5%, 6% 5%, 5% 6%, 5% 100%, 0 100%);
+}
+
+.video-game-scroll-div {
+    background-color: var(--dark-color);
+    position: absolute;
+    z-index: 6;
+    top: 30%;
+    left: 3.5%;
+    height: 71%;
+    overflow: hidden;
+    width: 8%;
+    display: flex;
+    justify-content: center;
+
 }
 
 .video-game-card h4 {
     position: absolute;
-    z-index: 1;
     color: var(--light-color);
-    margin-left: 10px;
-    font-family: Poppins;
-    font-weight: 400;
-    bottom: 10px;
+    font-family: 'titleFont', sans-serif;
+    font-weight: 1000;
+    font-size: 15px;
     transition: .3s;
+    text-transform: uppercase;
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    white-space: nowrap;
+    animation: scroll-up 10s linear infinite;
 }
 
-.video-game-card-selected h4{
-    color: var(--primary-color);
+.video-game-scroll-text2 {
+    top: 100%;
+    animation: scroll-up2 10s linear infinite;
+
 }
 
+@keyframes scroll-up {
+    0% {top: 0%;}
+    100% {top: -200%;}
+}
+
+@keyframes scroll-up2 {
+    0% {top: 100%;}
+    100% {top: -100%;}
+}
+
+.video-game-card h4::after {
+    content: inherit;
+}
 
 .video-game-card-img1 {
-    object-position: center top;
     transition: .4s;
-    top: 0;
-    width: calc(100% - 10px);
-    height: calc(100% - 10px);
-    position: absolute;
-    left: 0%;
+    width: 90%;
+    height: 100%;
+    position: absolute; 
     object-fit: cover;
-    margin: 5px;
-}
-
-.video-game-card:hover .video-game-card-img2
-{
-    left: 0%; 
-}
-
-.video-game-card-img2 {
-    object-position: center top;
-    transition: .4s;
-    top: 0;
-    width: calc(100% - 10px);
-    height: calc(100% - 10px);
-    position: absolute;
-    left: -100%;
-    object-fit: cover;
-    margin: 5px;
-}
-
-.video-game-card-selected .video-game-card-img2 {
-    left: 0%; 
-}
-
-.triangle-bottomleft {
-    width: 0;
-    height: 0;
-    border-bottom: 20px solid var(--light-color);
-    border-right: 20px solid transparent;
-    left: 0;
-    bottom: 0;
-    position: absolute;
-}
-
-
-.triangle-topright {
-    width: 0;
-    height: 0;
-    border-top: 40px solid var(--light-color);
-    border-left: 40px solid transparent;
-    position: absolute;
-    top: 0;
-    right: 0;
+    filter: saturate(0.7) sepia(0.3);
+    margin: 0;
+    bottom: -40%;
+    border-radius: 50px;
+    clip-path: polygon(0 0, 100% 0, 100% 59%, 0 59%);
 }
 
 .video-game-card a {
-    background-color:var(--primary-color);
-    color: var(--light-color);
+    background-color:var(--light-color);
+    color: var(--primary-color);
     padding: 5px 7px;
     text-decoration: none;
     transition: bottom 1.3s, background-color .3s;
-    bottom: -100%;
-}
-
-.video-game-card-selected a {
-    z-index: 1;
+    z-index: 6;
     position: absolute;
-    right: 10px;
-    bottom: 10px;
+    right: -5px;
+    top: 20%;
+    font-size: 20px;
 }
 
 .video-game-card-selected a:hover {
