--- a/css/page-about.css
+++ b/css/page-about.css
@@ -14,3 +14,20 @@
     text-align: center;
 }
 
+#certification-section {
+    margin-top: 70px;
+}
+
+.grid-about-1 {
+    margin-top: 120px;
+    margin-bottom: 100px;
+    width: calc(3vw*30 + .1em);
+    height: calc(3vw * 16 + .1em);
+}
+
+.grid-about-2 {
+    margin-top: 1000px;
+    margin-bottom: 100px;
+    width: calc(3vw*30 + .1em);
+    height: calc(3vw * 10 + .1em);
+}
