--- a/css/page-specific-project.css
+++ b/css/page-specific-project.css
@@ -58,3 +58,16 @@
     width: calc(100%/7);
     object-position: center -20px;
 }
+
+/*FIND THE WAY BACK*/
+
+#ftwb-section {
+    margin-bottom: 100px;
+}
+
+.grid-ftwb {
+    margin-top: 120px;
+    margin-bottom: 100px;
+    width: calc(3vw*30 + .1em);
+    height: calc(3vw * 26 + .1em);
+}
