--- a/css/page-specific-project.css
+++ b/css/page-specific-project.css
@@ -78,3 +78,10 @@
     width: calc(3vw*30 + .1em);
     height: calc(3vw * 21 + .1em);
 }
+
+.grid-pop {
+    margin-top: 120px;
+    margin-bottom: 100px;
+    width: calc(3vw*30 + .1em);
+    height: calc(3vw * 23 + .1em);
+}
