those who remain page

--- a/css/page-specific-project.css
+++ b/css/page-specific-project.css
@@ -106,3 +106,10 @@
     width: calc(3vw*30 + .1em);
     height: calc(3vw * 15 + .1em); 
 }
+
+.grid-those-who-remain {
+    margin-top: 120px;
+    margin-bottom: 100px;
+    width: calc(3vw*30 + .1em);
+    height: calc(3vw * 19 + .1em); 
+}
