--- a/css/page-contact.css
+++ b/css/page-contact.css
@@ -32,10 +32,12 @@
 
 .mail-div {
     position: relative;
-    width: 100%;
-    height: 120px;
+    /* width: 100%; */
+    width: 120px;
+    height: 110px;
     display: flex;
     align-items: flex-end;
-    margin-right: 50px;
+    /* margin-right: 50px; */
     justify-content: flex-end;
+    padding-bottom: 10px;
 }
