--- a/css/page-video-game.css
+++ b/css/page-video-game.css
@@ -20,6 +20,12 @@
     .div-grid {
         grid-template-columns: calc(100%/3) calc(100%/3) calc(100%/3);
     }
+    .grid-video-game-1 {
+        margin-top: 120px;
+        margin-bottom: 100px;
+        width: calc(6vw*30 + .1em);
+        height: calc(6vw * 26 + .1em);
+    }
 }
 
 @media screen and (max-width: 1000px) {
@@ -31,6 +37,12 @@
 @media screen and (max-width: 600px) {
     .div-grid {
         grid-template-columns: 100%;
+    }
+    .grid-video-game-1 {
+        margin-top: 120px;
+        margin-bottom: 100px;
+        width: calc(10vw*30 + .1em);
+        height: calc(10vw * 26 + .1em);
     }
 }
 
