--- a/css/page-specific-project.css
+++ b/css/page-specific-project.css
@@ -114,6 +114,13 @@
     height: calc(3vw * 19 + .1em); 
 }
 
+.grid-chase-tag {
+    margin-top: 120px;
+    margin-bottom: 100px;
+    width: calc(3vw*30 + .1em);
+    height: calc(3vw * 13 + .1em); 
+}
+
 #photography-container {
     width: 90%;
     margin: auto;
@@ -126,3 +133,4 @@
     width: calc(3vw*30 + .1em);
     height: calc(3vw * 60 + .1em); 
 }
+
