--- a/css/text.css
+++ b/css/text.css
@@ -11,7 +11,6 @@ h1 {
     font-size:  7vh;
     color: var(--primary-color);   
     margin-top: 30px;
-
 }
 
 h2 {
@@ -63,6 +62,7 @@ p {
     font-weight: 300;
     font-size: 15px;
     color: var(--light-color);
+    line-height: 23px;
 }
 
 .project-card-title {
