--- a/css/text.css
+++ b/css/text.css
@@ -4,6 +4,7 @@
   font-family: titleFont;
   src: url('../font/OPTIVenus-BoldExtended.otf')  format('otf');
 }
+@import url('https://fonts.googleapis.com/css2?family=Play:wght@700&family=Sarpanch:wght@900&display=swap');
 
 h1 {
     font-family: 'titleFont', sans-serif;
