copy email adress system change

--- a/css/main.css
+++ b/css/main.css
@@ -170,6 +170,10 @@ button:hover {
     display: none;
 }
 
+.cursor-hidden2 {
+    display: none;
+}
+
 #text-to-copy {
     position: absolute;
     user-select: none;
