--- a/css/page-contact.css
+++ b/css/page-contact.css
@@ -23,21 +23,13 @@
     height: calc(3vw * 7 + .1em);
 }
 
-#copied-sign {
-    position: absolute;
-    font-family: Barlow;
-    font-weight: 700;
-    transform-origin: center;
-}
-
 .mail-div {
-    position: relative;
-    /* width: 100%; */
+    position: absolute;
     width: 120px;
     height: 110px;
-    display: flex;
-    align-items: flex-end;
-    /* margin-right: 50px; */
-    justify-content: flex-end;
     padding-bottom: 10px;
+    margin-left: -60px;
+    margin-top: -55px;
+    z-index: 100;
+    pointer-events: none;
 }
