--- a/css/main.css
+++ b/css/main.css
@@ -218,3 +218,15 @@ button:hover {
     background-color: transparent;
     color: var(--light-color);
 }
+
+
+.mail-div {
+    position: absolute;
+    width: 120px;
+    height: 110px;
+    padding-bottom: 10px;
+    margin-left: -60px;
+    margin-top: -55px;
+    z-index: 100;
+    pointer-events: none;
+}
