--- a/css/project-window.css
+++ b/css/project-window.css
@@ -22,9 +22,16 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: .5s;
+    transition: .3s;
     position: relative;
     filter: brightness(70%);
+    transform: scale(100%);
+}
+
+.project-window1-image:hover {
+    filter: brightness(30%);
+    transform: scale(110%);
+
 }
 
 .project-card-data {
