--- a/css/page-video-game.css
+++ b/css/page-video-game.css
@@ -56,8 +56,9 @@
     justify-content: center;
     margin: auto;
     margin-bottom: 20px;
-    border-radius: 8px;
+    /* border-radius: 8px; */
     transform-style: preserve-3d;
+    overflow: hidden;
 }
 
 .video-game-card:after {
@@ -133,8 +134,14 @@
     height: 100%;
     position: absolute; 
     object-fit: cover;
-    filter: saturate(0.7) sepia(0.3);
+    filter: saturate(0.7) sepia(0.3) brightness(90%);;
     margin: 0;
+    transform: scale(100%);
+}
+
+.video-game-card-img:hover {
+    filter: saturate(0.4) sepia(0.3) brightness(30%);;
+    transform: scale(110%);
 }
 
 .video-game-card a {
