--- a/css/page-video-game.css
+++ b/css/page-video-game.css
@@ -69,11 +69,11 @@
 .video-game-card-arrow {
     background-color:var(--dark-color);
     position: absolute;
-    top: 2.5%;
-    left: 3.5%;
-    width: 8%;
-    height: 10%;
-    clip-path: polygon(0 70%, 50% 0, 100% 70%, 70% 70%, 70% 100%, 30% 100%, 30% 70%);
+    bottom: 2.5%;
+    right: 3.5%;
+    width: 10%;
+    height: 8%;
+    clip-path: polygon(0 30%, 30% 30%, 30% 0%, 100% 50%, 30% 100%, 30% 70%, 0% 70%);
     z-index: 6;
 }
 
