--- a/css/text.css
+++ b/css/text.css
@@ -27,11 +27,11 @@ h3 {
 }
 
 a {
-    font-family: 'Barlow', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: 400;
-    font-size: large;
-    color: var(--primary-color);
+    color: var(--light-color);
     cursor: none;  
+    font-size: 15px;
 }
 
 .link-in-text {
@@ -76,4 +76,23 @@ p {
 .project-card-text {
     height: 70px;
     color: var(--text-color);
+}
+
+b {
+    width: fit-content;
+    position: relative;
+    z-index: 3;
+    font-weight: 400;
+}
+
+b::after {
+    display: block;
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 10px;
+    width: 100%;
+    height: 10px;
+    z-index: -1;
+    box-shadow:0px 10px var(--highlight-color);
 }
