modif on video game pages => blog format in progress

--- a/css/text.css
+++ b/css/text.css
@@ -4,7 +4,7 @@
   font-family: titleFont;
   src: url('../font/OPTIVenus-BoldExtended.otf')  format('otf');
 }
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');h1 {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");h1 {
     font-family: 'titleFont', sans-serif;
     font-weight: 900;
     font-size:  7vh;
@@ -62,6 +62,7 @@ p {
     font-size: 15px;
     color: var(--light-color);
     line-height: 23px;
+    margin-bottom: 1rem;
 }
 
 .project-card-title {
