--- a/css/page-video-game.css
+++ b/css/page-video-game.css
@@ -50,12 +50,13 @@
     background-color: transparent;
     position: relative;
     width: 90%;
+    height: 100%;
     transition: .5s;
     display: flex;
     align-items: center;
     justify-content: center;
     margin: auto;
-    margin-bottom: 20px;
+    /* margin-bottom: 5px; */
     /* border-radius: 8px; */
     transform-style: preserve-3d;
     overflow: hidden;
@@ -66,15 +67,47 @@
     padding-bottom: 100%;
 }
 
+.video-game-card-bottom {
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    /* justify-content: space-between; */
+}
+
+.video-game-title {
+    position: relative;
+    width: fit-content;
+    margin-bottom: 30px;
+    margin-top: 5px;
+    font-family: 'titleFont', sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: var(--dark-color);
+    background-color: var(--light-color);
+    padding: 5px;
+}
+
 .video-game-card-arrow {
-    background-color:var(--dark-color);
-    position: absolute;
-    bottom: 2.5%;
-    right: 3.5%;
+    position: relative;
+    /* background-color:var(--light-color); */
+    width: fit-content;
+    margin-bottom: 30px;
+    margin-top: 5px;
+    font-family: 'titleFont', sans-serif;
+    font-weight: 600;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: var(--light-color);
+    padding: 5px;
+    /* padding-right: 0; */
+    /* bottom: 5.5%;
+    right: 5%;
     width: 10%;
-    height: 8%;
-    clip-path: polygon(0 30%, 30% 30%, 30% 0%, 100% 50%, 30% 100%, 30% 70%, 0% 70%);
-    z-index: 6;
+    height: 8%; */
+    /* clip-path: polygon(0 30%, 30% 30%, 30% 0%, 100% 50%, 30% 100%, 30% 70%, 0% 70%); */
 }
 
 .video-game-card:hover .video-game-card-arrow {
@@ -164,6 +197,15 @@
     right: 0px;
 }
 
+.video-game-card-container {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    align-content: flex-start;
+}
+
 .object-to-filter {
     display: none;
 }
@@ -176,3 +218,4 @@
     background-color: transparent;
     color: var(--light-color);
 }
+
