--- a/css/text.css
+++ b/css/text.css
@@ -24,6 +24,7 @@ h3 {
     font-weight: 800;
     font-size: 3vh;
     color: var(--primary-color);
+    margin-top: 10px;
 }
 
 a {
@@ -85,6 +86,7 @@ b {
     position: relative;
     z-index: 3;
     font-weight: 400;
+    margin-right:15px;
 }
 
 b::after {
@@ -93,8 +95,37 @@ b::after {
     position: absolute;
     left: 0;
     bottom: 10px;
-    width: 100%;
-    height: 10px;
+    width: calc(100% + 10px);
+    height: 15px;
     z-index: -1;
     box-shadow:0px 10px var(--highlight-color);
+}
+
+.info-text {
+    position: relative;
+    width: fit-content;
+    font-family: 'titleFont', sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+    text-transform: uppercase;
+    color: var(--dark-color);
+    background-color: var(--light-color);
+    padding: 5px;  
+    margin-bottom: 5px;
+    line-height: 31px
+}
+
+.external-link {
+    text-decoration: none;
+    font-size: 1rem;
+}
+
+.external-link::after {
+    content: '🡥';
+    margin-left: 5px;
+    font-size: 1rem;
+}
+
+.external-link:hover {
+    background-color: var(--primary-color);
 }
