--- a/css/text.css
+++ b/css/text.css
@@ -1,131 +1,135 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Sarpanch:wght@900&display=swap'); 
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sarpanch:wght@900&display=swap");
 @font-face {
   font-family: titleFont;
-  src: url('../font/OPTIVenus-BoldExtended.otf')  format('otf');
+  src: url("../font/OPTIVenus-BoldExtended.otf") format("otf");
 }
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");h1 {
-    font-family: 'titleFont', sans-serif;
-    font-weight: 900;
-    font-size:  7vh;
-    color: var(--primary-color);   
-    margin-top: 30px;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+h1 {
+  font-family: "titleFont", sans-serif;
+  font-weight: 900;
+  font-size: 7vh;
+  color: var(--primary-color);
+  margin-top: 30px;
 }
 
 h2 {
-    font-family: 'Barlow', sans-serif;
-    font-weight: 400;
-    font-size: 5vh;
-    color: var(--secondary-color);
+  font-family: "Barlow", sans-serif;
+  font-weight: 400;
+  font-size: 5vh;
+  color: var(--secondary-color);
 }
 
 h3 {
-    font-family: 'titleFont', sans-serif;
-    font-weight: 800;
-    font-size: 3vh;
-    color: var(--primary-color);
-    margin-top: 10px;
+  font-family: "titleFont", sans-serif;
+  font-weight: 800;
+  font-size: 3vh;
+  color: var(--primary-color);
+  margin-top: 10px;
 }
 
 a {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    color: var(--light-color);
-    cursor: none;  
-    font-size: 15px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  color: var(--light-color);
+  cursor: none;
+  font-size: 15px;
 }
 
 .link-in-text {
-    color: var(--light-color);
-    text-decoration: underline;
+  color: var(--light-color);
+  text-decoration: underline;
 }
 
 .link-in-text:hover {
-    background-color: var(--primary-color);
+  background-color: var(--primary-color);
 }
 
 menu a {
-    background-color: var(--background-color);
-    padding: 10px;
-    width: 100%;
-    height: 100%;
-    transition: .3s;
+  background-color: var(--background-color);
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  transition: 0.3s;
 }
 
 menu a:hover {
-    background-color: var(--primary-color);
-    color: var(--light-color);
+  background-color: var(--primary-color);
+  color: var(--light-color);
 }
 
 p {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 300;
-    font-size: 15px;
-    color: var(--light-color);
-    line-height: 23px;
-    margin-bottom: 1rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  color: var(--light-color);
+  line-height: 23px;
+  margin-bottom: 1rem;
 }
 
 .project-window-title {
-    font-family: 'Barlow';
-    font-weight: 550;
-    color: var(--primary-color);
-    text-decoration: none;
-    align-self: center;
-    text-transform: uppercase;
-    margin-bottom: 0;
+  font-family: "Barlow";
+  font-weight: 550;
+  color: var(--primary-color);
+  text-decoration: none;
+  align-self: center;
+  text-transform: uppercase;
+  margin-bottom: 0;
 }
 
 .project-card-text {
-    height: 70px;
-    color: var(--text-color);
+  height: 70px;
+  color: var(--text-color);
 }
 
 b {
-    width: fit-content;
-    position: relative;
-    z-index: 3;
-    font-weight: 400;
-    margin-right:15px;
+  width: fit-content;
+  position: relative;
+  z-index: 3;
+  font-weight: 400;
+  margin-right: 15px;
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  color: var(--light-color);
 }
 
 b::after {
-    display: block;
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 10px;
-    width: calc(100% + 10px);
-    height: 15px;
-    z-index: -1;
-    box-shadow:0px 10px var(--highlight-color);
+  display: block;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 10px;
+  width: calc(100% + 10px);
+  height: 15px;
+  z-index: -1;
+  box-shadow: 0px 10px var(--highlight-color);
 }
 
 .info-text {
-    position: relative;
-    width: fit-content;
-    font-family: 'titleFont', sans-serif;
-    font-weight: 600;
-    font-size: 15px;
-    text-transform: uppercase;
-    color: var(--dark-color);
-    background-color: var(--light-color);
-    padding: 5px;  
-    margin-bottom: 5px;
-    line-height: 31px
+  position: relative;
+  width: fit-content;
+  font-family: "titleFont", sans-serif;
+  font-weight: 600;
+  font-size: 15px;
+  text-transform: uppercase;
+  color: var(--dark-color);
+  background-color: var(--light-color);
+  padding: 5px;
+  margin-bottom: 5px;
+  line-height: 31px;
 }
 
 .external-link {
-    text-decoration: none;
-    font-size: 1rem;
+  text-decoration: none;
+  font-size: 1rem;
 }
 
 .external-link::after {
-    content: '🡥';
-    margin-left: 5px;
-    font-size: 1rem;
+  content: "🡥";
+  margin-left: 5px;
+  font-size: 1rem;
 }
 
 .external-link:hover {
-    background-color: var(--primary-color);
+  background-color: var(--primary-color);
 }
