--- a/css/page-about.css
+++ b/css/page-about.css
@@ -18,6 +18,10 @@
     margin-top: 70px;
 }
 
+#about-me-section {
+    width: 75%;
+}
+
 .grid-about-1 {
     margin-top: 120px;
     margin-bottom: 100px;
