--- a/css/page-contact.css
+++ b/css/page-contact.css
@@ -18,6 +18,10 @@
 .grid-contact-1 {
     margin-top: 120px;
     margin-bottom: 100px;
-    width: calc(3vw*30 + .1em);
+    /* width: calc(3vw*30 + .1em); */
     height: calc(3vw * 10 + .1em);
+}
+
+#contact-section {
+    width: 75%;
 }
