--- a/css/page-specific-project.css
+++ b/css/page-specific-project.css
@@ -94,10 +94,14 @@
 .next-project-button {
     height: 100%; 
     width: 100px; 
-    background: linear-gradient(to left, var(--background-color), var(--secondary-color)); 
+    /* background: linear-gradient(to left, var(--background-color), var(--secondary-color));  */
     font-size: 20px;
     text-decoration: none;
     transform: .3s;
+}
+
+.next-project-button-right {
+    /* background: linear-gradient(to left, var(--secondary-color), var(--background-color)); */
 }
 
 .next-project-button:hover {
@@ -108,6 +112,10 @@
     font-family: Barlow; 
     font-weight:700; 
     font-size:20px;
+}
+
+#right-project, #left-project {
+    margin: 0;
 }
 
 #blog-section img {
