--- a/css/text.css
+++ b/css/text.css
@@ -11,6 +11,8 @@ h1 {
   font-size: 7vh;
   color: var(--primary-color);
   margin-top: 30px;
+  line-height: 80%;
+  margin-bottom: 5px;
 }
 
 h2 {
