--- a/css/main.css
+++ b/css/main.css
@@ -164,11 +164,14 @@ button:hover {
     text-decoration: none;
     text-transform: uppercase;
     font-weight: 500;
+    font-size: .7vw;
     color: var(--background-color);
     border-radius: 0;
     padding: 10px;
     cursor: none;
     width: fit-content;
+    margin: 0 5px;
+    line-height: 0px;
 }
 
 .btn1:hover { 
