--- a/css/page-index.css
+++ b/css/page-index.css
@@ -83,9 +83,9 @@
     width: 40px;
     position: absolute;
     margin: 0;
-    margin-right: 1px;
     background-color: var(--secondary-color);
     overflow: hidden;
+    height: 98%;
 }
 
 .scroll-text {
