--- a/css/page-video-game.css
+++ b/css/page-video-game.css
@@ -222,3 +222,14 @@
 #filter-btn-container {
   flex-wrap: wrap;
 }
+
+.video-game-tag-div {
+  height: 25px;
+  line-height: 10px;
+  width: 40px;
+  overflow: hidden;
+  margin: 5px;
+  position: relative;
+  color: var(--primary-color);
+  text-transform: uppercase;
+}
