--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@ body {
     margin-top: 120px;
     margin-bottom: 100px;
     width: calc(3vw*26 + .1em);
+    border-bottom: solid var(--secondary-color) 1.5px;
 }
 
 .grid-index-2 {
