--- a/css/page-specific-project.css
+++ b/css/page-specific-project.css
@@ -72,16 +72,26 @@
 }
 
 #photography-container {
-    width: 90%;
+    width: 100%;
     margin: auto;
     gap: 0;
 }
 
 .grid-photography {
     margin-top: 120px;
-    margin-bottom: 100px;
-    width: calc(3vw*30 + .1em);
-    height: calc(3vw * 65 + .1em); 
+    margin-bottom: 5vw;
+}
+
+@media screen and (max-width: 1000px) {
+    #photography-container {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #photography-container {
+        flex-direction: column;
+    }
 }
 
 .other-projects {
